# judge-grpc-demo

./: Cargo.toml  README.adoc  build.rs
.github/workflows/: build.yaml  sync-bsr.yaml
proto/: README.adoc  buf.md  buf.yaml
proto/judge/v1/: judge.proto
src/: client.rs  server.rs  shared.rs
