[package]
name = "judge-grpc-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
anyhow = "1.0.80"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.11.0"

[build-dependencies]
anyhow = "1.0.80"
tonic-build = "0.11.0"

[profile.release]
lto = true
strip = true
